added links to partners

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <head>
     <meta charset="utf-8"/>
     <title>Neural Wave</title>
@@ -53,14 +52,16 @@
     <h1 class="heading">Where Innovation Meets AI</h1>
     <p class="paragraph">Embark on an exhilarating hackathon with global innovators. Leverage AI techniques, tackle real
         challenges, and shape the future</p></section>
-<section class="section-2"><p class="paragraph companies">These companies have expressed initial interest</p>
-    <div class="w-layout-hflex flex-block-5"><img
+<section class="section-2"><p class="paragraph companies">Our Partners</p>
+    <div class="w-layout-hflex flex-block-5"><a href="http://www.usi.ch" target="_blank" class="w-inline-block"><img
             src="https://assets-global.website-files.com/65e8b58c448efee2f8d0ef1f/65e8eff2eb65af7b64921948_press-logo-statico-usi-orizzontale-web%202.svg"
-            loading="lazy" alt="" class="image-7"/><img
+            loading="lazy" alt="" class="image-7"/></a><a href="http://www.startup.usi.ch" target="_blank"
+                                                          class="w-inline-block"><img
             src="https://assets-global.website-files.com/65e8b58c448efee2f8d0ef1f/662b7ee2c8b648b64dcc0284_Group.svg"
-            loading="lazy" alt="" class="image-7"/><img
+            loading="lazy" alt="" class="image-7"/></a><a href="http://www.bosch.ch" target="_blank"
+                                                          class="w-inline-block"><img
             src="https://assets-global.website-files.com/65e8b58c448efee2f8d0ef1f/65e8efa37bddef9fd48869a8_Bosch-logo%201.svg"
-            loading="lazy" alt="" class="image-10"/></div>
+            loading="lazy" alt="" class="image-10"/></a></div>
 </section>
 <section class="section-3">
     <div class="w-layout-vflex flex-block-9">
