--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
     <p class="paragraph">Embark on an exhilarating hackathon with global innovators. Leverage AI techniques, tackle real
         challenges, and shape the future</p></section>
 <section class="section-2"><p class="paragraph companies">Our Partners</p>
-    <div class="w-layout-hflex flex-block-5"><a href="http://www.usi.ch" target="_blank" class="w-inline-block"><img
+    <div class="w-layout-hflex flex-block-5"><a href="https://www.usi.ch" target="_blank" class="w-inline-block"><img
             src="https://assets-global.website-files.com/65e8b58c448efee2f8d0ef1f/65e8eff2eb65af7b64921948_press-logo-statico-usi-orizzontale-web%202.svg"
-            loading="lazy" alt="" class="image-7"/></a><a href="http://www.startup.usi.ch" target="_blank"
+            loading="lazy" alt="" class="image-7"/></a><a href="https://www.startup.usi.ch" target="_blank"
                                                           class="w-inline-block"><img
             src="https://assets-global.website-files.com/65e8b58c448efee2f8d0ef1f/662b7ee2c8b648b64dcc0284_Group.svg"
-            loading="lazy" alt="" class="image-7"/></a><a href="http://www.bosch.ch" target="_blank"
+            loading="lazy" alt="" class="image-7"/></a><a href="https://www.bosch.com" target="_blank"
                                                           class="w-inline-block"><img
             src="https://assets-global.website-files.com/65e8b58c448efee2f8d0ef1f/65e8efa37bddef9fd48869a8_Bosch-logo%201.svg"
             loading="lazy" alt="" class="image-10"/></a></div>
