--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html data-wf-domain="neural-wave.webflow.io" data-wf-page="65e8b58c448efee2f8d0ef29"
-      data-wf-site="65e8b58c448efee2f8d0ef1f">
+<html>
 <head>
     <meta charset="utf-8"/>
     <title>Neural Wave</title>
