added new sponsor

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
             loading="lazy" alt="" class="image-10"/></a><a href="https://www.swisscom.ch" target="_blank"
                                                            class="w-inline-block"><img
             src="https://cdn.prod.website-files.com/65e8b58c448efee2f8d0ef1f/6644ad881ccb14a4c0f31561_Group%207.svg"
+            loading="lazy" alt="" class="image-10"/></a><a href="https://www.banana.ch" target="_blank"
+                                                           class="w-inline-block"><img
+            src="https://cdn.prod.website-files.com/65e8b58c448efee2f8d0ef1f/6668c09e6c34c9d851434b48_logo%201.svg"
             loading="lazy" alt="" class="image-10"/></a></div>
 </section>
 <section class="section-3">
@@ -90,7 +93,7 @@
                 <h2 class="heading h2">A Match Made in Heaven</h2></div>
             <div class="w-layout-vflex flex-block-12">
                 <div class="div-block-6"><img
-                        src="https://cdn.prod.website-files.com/65e8b58c448efee2f8d0ef1f/65ea2e4ba092d0a538c19475_Frame%206.svg"
+                        src="https://cdn.prod.website-files.com/65e8b58c448efee2f8d0ef1f/6668c17a6de78241c32c2ae3_Frame%206.svg"
                         loading="lazy" width="471" alt=""/><img
                         src="https://cdn.prod.website-files.com/65e8b58c448efee2f8d0ef1f/65ea2bed787c16335ff823f3_antonio-sessa-J0kFxRQvFFk-unsplash%201.png"
                         loading="lazy" width="480" sizes="(max-width: 479px) 77vw, (max-width: 767px) 75vw, 480px"
